<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="201dp"
        android:layout_height="36dp"
        android:fontFamily="monospace"
        android:text="@string/tv"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <EditText
        android:id="@+id/kayitad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/adtext"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/kayitsoyad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:hint="@string/soyadtext"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kayitad"
        android:autofillHints="" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="159dp"
        android:background="#FF9800"
        android:backgroundTint="#FF9800"
        android:text="@string/kayitbuton"
        android:textColor="#FFFFFF"
        app:icon="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kayitsifretekrar" />

    <EditText
        android:id="@+id/kayiteposta"
        android:layout_width="206dp"
        android:layout_height="45dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:hint="@string/e_postatext"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kayityas"
        android:autofillHints="" />

    <EditText
        android:id="@+id/kayitsifretekrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="93dp"
        android:ems="10"
        android:hint="@string/ifre_tekrartext"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kayitsifre"
        android:autofillHints="" />

    <EditText
        android:id="@+id/kayitsifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="93dp"
        android:ems="10"
        android:hint="@string/sifretext"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kayiteposta"
        android:autofillHints="" />

    <EditText
        android:id="@+id/kayityas"
        android:layout_width="207dp"
        android:layout_height="47dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="91dp"
        android:ems="10"
        android:hint="@string/yastext"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kayitsoyad"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>